--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="index.js"></script>
-	<script type="text/javascript" src="Data/dockets_16.js"></script>
-	<script type="text/javascript" src="Data/dockets_17.js"></script>
-	<script type="text/javascript" src="Data/dockets_18.js"></script>
+	<script type="text/javascript" src="dockets_16.js"></script>
+	<script type="text/javascript" src="dockets_17.js"></script>
+	<script type="text/javascript" src="dockets_18.js"></script>
 </head>
 
 <body class="normal_background">
