--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
 				tbody.innerHTML += tr;
 
-				if (i === 40) {
-					break;
-				}
+				//if (i === 40) {
+				//	break;
+				//}
 			}
 		}
 		get_data();
